Updated homepage UI and fixed bugs

--- a/src/WebServices/Page2.css
+++ b/src/WebServices/Page2.css
@@ -17,6 +17,7 @@ html, body {
     width: 100%;
     position: relative;
     margin-top: 80px;
+    height: 600px;
 }
 
 /* Left Section - Text Container */
