--- a/src/Pages/Appindustries.css
+++ b/src/Pages/Appindustries.css
@@ -8,7 +8,7 @@
   button:hover,
   .industries-tab:hover,
   .learn-more:hover {
-      color: blue;  
+      color: #007bff;  
       font-weight: bold;
       background: inherit;
       border: none;
@@ -53,7 +53,7 @@
   }
   
   .industries-tab.active {
-    color: blue;
+    color:#007bff;
     font-weight: bold;
   }
 
