--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -93,7 +93,27 @@
     font-weight: 600;
     font-family: "Outfit", sans-serif;
   }
-  
+  .chat-now-btn:hover,
+
+.chat-now-btn:focus,
+
+.chat-now-btn:active
+ {
+  font-family: "Outfit", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  color: #007bff;
+  background: none !important; 
+  border:1px solid #007bff ;
+ 
+ 
+  outline: none !important;
+  box-shadow: none !important;
+  transform: none !important;
+  filter: none !important;
+  pointer-events: auto; /* Ensure button remains clickable */
+}
+
   /* Blinking Green Dot */
   .blinking-dot {
     width: 8px;
